# load-test-bazel

./: README.md  angular  angular-metadata.tsconfig.json  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json  tsconfig.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  require.config.js
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/Module000000/: BUILD.bazel  Module000000.module.ts  my.000000.component.html  my.000000.component.ts  my.000001.component.ts  my.000002.component.html
src/app/Module000001/: BUILD.bazel  Module000001.module.ts  my.000001.component.html  my.000002.component.html  my.000002.component.ts  my.000003.component.ts  my.000004.component.ts
src/app/Module000002/: Module000002.module.ts  my.000004.component.html  my.000005.component.ts
src/app/Module000003/: Module000003.module.ts  my.000006.component.html  my.000006.component.ts  my.000007.component.ts
src/app/Module000004/: Module000004.module.ts  my.000008.component.html  my.000008.component.ts  my.000009.component.ts
src/app/Module000005/: Module000005.module.ts  my.000010.component.html  my.000010.component.ts  my.000011.component.ts
src/app/Module000006/: Module000006.module.ts  my.000012.component.html  my.000012.component.ts  my.000013.component.ts
src/app/Module000007/: Module000007.module.ts  my.000014.component.html  my.000014.component.ts  my.000015.component.ts
src/app/Module000008/: Module000008.module.ts  my.000016.component.html  my.000016.component.ts  my.000017.component.ts
src/app/Module000009/: Module000009.module.ts  my.000018.component.html  my.000018.component.ts  my.000019.component.ts
src/app/Module000010/: Module000010.module.ts  my.000020.component.html  my.000020.component.ts  my.000021.component.ts
src/app/Module000011/: Module000011.module.ts  my.000022.component.html  my.000022.component.ts  my.000023.component.ts
src/app/Module000012/: Module000012.module.ts  my.000024.component.html  my.000024.component.ts  my.000025.component.ts
src/app/Module000013/: Module000013.module.ts  my.000026.component.html  my.000026.component.ts  my.000027.component.ts
src/app/Module000014/: Module000014.module.ts  my.000028.component.html  my.000028.component.ts  my.000029.component.ts
src/app/Module000015/: Module000015.module.ts  my.000030.component.html  my.000030.component.ts  my.000031.component.ts
src/app/Module000016/: Module000016.module.ts  (+3 more)
src/app/data-table/: BUILD.bazel  data-table.component.html  data-table.component.ts  data-table.module.ts
src/app/module-lazy-load/: BUILD.bazel  module-lazy-load-routing.module.ts  module-lazy-load.component.html  module-lazy-load.component.ts  module-lazy-load.module.ts
src/app/timer/: BUILD.bazel  timer.component.html  timer.component.ts  timer.module.ts
(+2330 files in other folders)
