package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "data-table",
    srcs = [
    "data-table.module.ts",
    "data-table.component.ts"
],
    assets = glob([
      "*.css",
      "*.html",
    ]),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/material",
        "@npm//@types",
        "@npm//rxjs",
    ],
)

