package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "module-lazy-load",
    srcs = [
    "module-lazy-load-routing.module.ts",
    "module-lazy-load.module.ts",
    "module-lazy-load.component.ts"
],
    assets = [
    "module-lazy-load.component.html"
],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@types",
        "@npm//rxjs",
    ],
)

