package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "timer",
    srcs = [
    "timer.module.ts",
    "timer.component.ts"
],
    assets = glob([
      "*.css",
      "*.html",
    ]),
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/material",
        "@npm//moment",
        "@npm//@types",
        "@npm//rxjs",
    ],
)

